--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,16 @@ label {
   max-width: 300px;
   margin: auto;
 }
+.list .action {
+  cursor: pointer;
+}
+
+.submit-form {
+  max-width: 300px;
+  margin: auto;
+}
+
+.edit-form {
+  max-width: 300px;
+  margin: auto;
+}
